@@ -129,6 +129,25 @@ plot.hclust <-
     invisible()
 }
 
+## For S ``compatibility'': was in cluster just as
+## plclust <- plot.hclust ## .Alias
+plclust <- function(tree, hang = 0.1, unit = FALSE, level = FALSE, hmin = 0,
+                    square = TRUE, labels = NULL, plot. = TRUE,
+                    axes = TRUE, frame.plot = FALSE, ann = TRUE,
+                    main = "", sub = NULL, xlab = NULL, ylab = "Height")
+{
+    if(!missing(unit) && unit)		.NotYetUsed("unit", error = FALSE)
+    if(!missing(level) && level)	.NotYetUsed("level", error = FALSE)
+    if(!missing(hmin) && hmin != 0)	.NotYetUsed("hmin",  error = FALSE)
+    if(!missing(square) && !square)	.NotYetUsed("square",error = FALSE)
+    if(!missing(plot.) && !plot.)	.NotYetUsed("plot.", error = TRUE)
+    plot.hclust(x = tree, labels = labels, hang = hang,
+                axes = axes, frame.plot = frame.plot, ann = ann,
+                main = main, sub = sub, xlab = xlab, ylab = ylab)
+}
+
+
+
 as.hclust <- function(x, ...) UseMethod("as.hclust")
 
 as.hclust.twins <- function(x, ...)
